# scRNAseq-tools

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  README_KO.md  environment.yml  pyproject.toml  reproducibility.md  test_aliases.py  test_all_clusters.py  test_cluster0_debug.py  test_cluster0_markers.py  test_cluster4.py  test_cluster4_debug.py  test_cluster4_tf_debug.py  test_consolidation_debug.py  test_quick_cluster0.py  test_tbet_cd11c.py  test_tbet_papers.py
src/scrnaseq_tools/: cli.py  data_utils.py  llm.py  manifest.py
src/scrnaseq_tools/analysis/: __init__.py  config.py  doublet.py  integration.py  loader.py  mcp_server.py  pipeline.py  profile.py  report.py  stats.py  visualization.py
src/scrnaseq_tools/commands/: __init__.py  bootstrap.py  chat.py  doctor.py  info.py  init.py  integrate.py  pipeline_cmd.py  profile_cmd.py  qc.py  repl.py  scan.py  summary.py  version.py
src/scrnaseq_tools/templates/claude/: README.md  annotation_gate.py  phase0_config.py  settings.json  settings.local.json
src/scrnaseq_tools/templates/claude/agents/: annotation-executor.md
src/scrnaseq_tools/templates/claude/mcp-servers/pubmed-tools/: pyproject.toml  server.py
src/scrnaseq_tools/templates/claude/mcp-servers/scrnaseq-tools/: pyproject.toml  server.py
src/scrnaseq_tools/templates/claude/skills/Annotation-agent/: DYNAMIC_KNOWLEDGE_README.md  SKILL.md
src/scrnaseq_tools/templates/claude/skills/Annotation-agent/core/: functional_analysis.md  principles.md  tier_goals.md
src/scrnaseq_tools/templates/claude/skills/Annotation-agent/decision/: matrices.md
src/scrnaseq_tools/templates/claude/skills/Annotation-agent/examples/: compact_examples.md  workflow_example.md
src/scrnaseq_tools/templates/claude/skills/Annotation-agent/phases/: tier1.md  tier1_template.py  tier2.md  tier2_template.py  tier3.md  tier3_template.py  user_config.md
src/scrnaseq_tools/templates/claude/skills/Annotation-agent/reasoning/: agent_format.md  integrated_format.md
src/scrnaseq_tools/templates/claude/skills/Annotation-agent/tools/: dynamic_knowledge.md  dynamic_knowledge.py  functional_plots.md  literature_verification.md  storage.md  storage_template.py  visualization.md  visualization_template.py
src/scrnaseq_tools/templates/claude/skills/QC-pipeline/: SKILL.md
src/scrnaseq_tools/templates/claude/skills/QC-pipeline/connection/: to_annotation.md
src/scrnaseq_tools/templates/claude/skills/QC-pipeline/core/: principles.md  qc_verification.md
src/scrnaseq_tools/templates/claude/skills/QC-pipeline/examples/: workflow_example.md
src/scrnaseq_tools/templates/claude/skills/QC-pipeline/phases/: batch_integration.md  (+5 more)
src/scrnaseq_tools/templates/claude/skills/decoupler/: SKILL.md
src/scrnaseq_tools/templates/claude/skills/integration-benchmark/: SKILL.md
src/scrnaseq_tools/templates/claude/skills/palantir/: SKILL.md
src/scrnaseq_tools/templates/claude/skills/pptx/: create_jmv_presentation.js
tests/: test_data_commands.py
(+12 files in other folders)
