[project]
name = "pubmed-tools"
version = "0.1.0"
description = "MCP tools for PubMed search and reference verification"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]

[project.scripts]
pubmed-tools = "server:main"
