[project]
name = "scrnaseq-tools-mcp"
version = "0.1.0"
description = "MCP tools for scRNAseq-tools local analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]

[project.scripts]
scrnaseq-tools-mcp = "server:main"
